[project]
name = "example-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "copernicusmarine>=2.0.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "netcdf4>=1.7.2",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "scipy>=1.15.2",
    "statsmodels>=0.14.4",
    "stl>=0.0.3",
    "xarray>=2025.1.2",
]
